RESOLVED FIXED31850
Compile fix for debug modus in WebCore/loader/loader.cpp
https://bugs.webkit.org/show_bug.cgi?id=31850
Summary Compile fix for debug modus in WebCore/loader/loader.cpp
Holger Freyther
Reported 2009-11-24 14:39:32 PST
Created attachment 43810 [details] Compile fix by using the new constructor A change in the constructors of KURL broke the debug mode inside WebCore/loader/loader.cpp, use the new constructor to fix it.
Attachments
Compile fix by using the new constructor (2.06 KB, patch)
2009-11-24 14:39 PST, Holger Freyther
ap: review+
ap: commit-queue-
Alexey Proskuryakov
Comment 1 2009-11-24 20:31:06 PST
Comment on attachment 43810 [details] Compile fix by using the new constructor r=me. Please add bug URL to ChangeLog when landing.
Holger Freyther
Comment 2 2009-11-26 02:37:29 PST
Landed in r51408.
Note You need to log in before you can comment on or make changes to this bug.