Fix compilation of REQUEST_DEBUG debug code

https://bugs.webkit.org/show_bug.cgi?id=31850

In r47907 the single parameter KURL constructor to parse
from a WebCore::String was replaced with a two parameter
constructor. I think in this debug case parsing the urls
again is no problem and I have changed the code to use the
two parameter version.

* loader/loader.cpp:
(WebCore::Loader::Host::didFinishLoading):

Canonical link: https://commits.webkit.org/42837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51408 268f45cc-cd09-0410-ab3c-d52691b4dbfc